# personal-finance-tracker

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
authentication/: views.py
authentication/templates/: login.html  register.html
budgets/: models.py  views.py
budgets/migrations/: 0001_initial.py  0002_remove_budget_end_date_remove_budget_name_and_more.py  0003_alter_budget_user.py
budgets/templates/: budgets.html
categories/: models.py  views.py
categories/migrations/: 0001_initial.py  0002_category_color_category_icon.py
categories/templates/: categories.html
core/: constants.py  models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_options.py
core/templates/: base.html
dashboard/: urls.py  views.py
dashboard/templates/: dashboard.html
financetracker/: settings.py  urls.py
goals/: models.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_remove_goal_category_alter_goal_user_goalhistory.py
goals/templates/: goals.html
landingpage/: views.py
landingpage/templates/: landing.html
transactions/: models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
transactions/templates/: transactions.html
