[project]
name = "finance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-mathfilters>=1.0.0",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.2",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.13.1",
]
